overflow fixed

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,10 @@
  
   body{
     overflow-x: hidden;
+    
+  }
+  .bodystuck{
+    overflow-y: hidden;
   }
 .slides{
   background-image: url(../media/background/background_1B.webp);
